--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: right;
     align-items: center;
-    height: 4em;
+    height: 5em;
     color: white;
 }
 
@@ -22,7 +22,7 @@ h1 {
 }
 
 .search-container {
-    margin: 30px;
+    margin: 15px;
 }
 
 .search-container input {
@@ -139,12 +139,20 @@ h2 {
         max-width: 100%;
         font-size: 10px;
     }
+
+    .navbar {
+        height: 6em;
+    }
 }
 
 @media screen and (max-width: 700px) {
     body {
         max-width: 100%;
         font-size: 9px;
+    }
+
+    .navbar {
+        height: 6em;
     }
 }
 
